# llm-project-builder

./: .gitignore  README.md  pyproject.toml
hanspeterradtke/llm_project_builder/: .gitmodules  LICENSE  publish.sh  pyproject.toml
hanspeterradtke/llm_project_builder/make_code/: __main__.py  prompt.txt
hanspeterradtke/llm_project_builder/make_code/test/: test_make_code.py
hanspeterradtke/llm_project_builder/tests/: test_all_utils.py
src/utils/make_code/: __init__.py  __main__.py  prompt.txt
src/utils/make_code/tests/: test_make_code.py
src/utils/open_router/: output.txt
src/utils/tests/: test_all_utils.py
