[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "hanspeterradtke-llm-project-builder"
version         = "0.1.0"
description     = "Generates complete Python projects from a single prompt."
readme          = "README.md"
requires-python = ">=3.11"
dependencies    = [
  "hanspeterradtke-utils @ git+https://github.com/HansPeterRadtke/utils.git"
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["hanspeterradtke*"]